--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title></title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
         <link href='favicon.ico' rel='icon'>
     </head>
@@ -43,7 +42,7 @@
                     I love machine learning a lot. I learnt everything in it myself by using
                     youtube and google and yes udemy.
                 </p>
-                
+
               </div>
               <div class="skill-row">
 
@@ -71,7 +70,7 @@
             <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/">Twitter</a>
             <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-            <p>© 2018 Name Surname.</p>
+            <p>© 2020 Pawandeep Singh</p>
           </div>
           
 
