--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
           
           <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/programminghut">
-            <img src='images/linkedin.png' height="30" width="30">
+            <img src='images/linkedin.png' height="30" width="30" class='imgs'>
             </a>
             <a class="footer-link" href="https://twitter.com/programming_hut">
-              <img src='images/twitter.png' height="30" width="30">
+              <img src='images/twitter.png' height="30" width="30" class='imgs'>
             </a>
             <a class="footer-link" href="https://youtube.com/c/programminghutofficial">
-              <img src='images/youtube.png' height="30" width="30">
+              <img src='images/youtube.png' height="30" width="30" class='imgs'>
             </a>
             <a class="footer-link" href="https://github.com/Pawandeep-prog">
-              <img src='images/github.png' height="30" width="30">
+              <img src='images/github.png' height="30" width="30" class='imgs'>
             </a>
             <p style="font-size: small; margin-top: 20px;">© 2020 Pawandeep Singh</p>
           </div>
